doc/digitalocean/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-auth-deployment
  namespace: backend
  labels:
    app: hr-auth-deployment
# Deployment 配置
spec:
  replicas: 1
  # 選擇哪一些 pod 做配置
  selector:
    matchLabels:
      app: hr-auth
  template:
    metadata:
      labels:
        app: hr-auth
    # Deployement's pod's Configuration
    spec:
      imagePullSecrets:
        - name:  docker-registry
      containers:
      - name: hr-auth
        image: supojen/hr-auth:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: hr-auth-service
  namespace: backend
spec:
  selector:
    app: hr-auth
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
