doc/digitalocean/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-auth-ingress
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-hr-auth
spec:
  tls:
    - hosts:
      - auth.zzzemoji.dev
      secretName: letsencrypt-hr-auth
  rules:
  - host: auth.zzzemoji.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hr-auth-service
            port:
              number: 80
